# whereabouts

./: .gitignore  .readthedocs.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  README.rst  address_setup.yml  download_gnaf.py  example.py  geocoder_queries.py  gnaf_details.yml  names.txt  pyproject.toml  requirements.txt  setup.yml  setup2.yml  setup_geocoder.py  setup_pl.yml  test_queries2.py  test_query.py  test_query_3.py
.github/workflows/: draft-pdf.yml
datasets/: addresses1.csv  apartments_170223.csv  apartments_190223.csv  apartments_210223.csv  nab_atm_vic.csv
docs/: index.rst  requirements.txt  usage.rst
docs/joss_submission/: paper.bib  paper.md  whereabouts_geocoder.md
docs/source/: api.rst  conf.py  config.py  contributing.rst  index.rst  references.bib  references.rst  usage.rst
evaluation/: README.md  geocoder_server.py  geocoder_ui.html
example_data/: test_set_au.csv
examples/: basic_matching.py  create_database.py
model_metadata/: all_models.json  au_sm.json  au_vic_lg.json  au_vic_sm.json
queries/: address_view.sql  create_addrtext.sql  create_addrtext2.sql  create_addrtext3.sql  create_addrtext4.sql  create_geocoder_tables.sql  create_indexes.sql  create_phrases.sql  create_phrases2.sql  create_tables_duckdb.sql  create_trigram_index_step1.sql  create_trigram_index_step2.sql  create_trigram_index_step4.sql  create_trigramphrases.sql  geocoder_query_standard.sql  geocoder_query_standard2.sql  geocoder_query_standard3.sql  geocoder_query_standard4.sql  load_addresses.sql  make_addresses.sql  trigramphrase_inverted.sql
tests/: conftest.py  setup_example.yml  setup_example_poland.yml  test_addressbuilder.py  test_addressbuilder_poland.py  test_data3056.parquet  test_datapoland.csv  test_matcher.py  test_set_au.csv  test_similarity_functions.py  test_utils.py
whereabouts/: AddressLoader.py  GNAFLoader.py  LoadAddresses.py  Matcher.py  MatcherPipeline.py  QueryPipeline.py  QueryStep.py  __init__.py  __main__.py  benchmark.py  constants.py  errors.py  utils.py
whereabouts/benchmark_results/: benchmarking_results_010626.csv  benchmarking_results_010626_narrow.csv  results_240526.csv  results_240526_2.csv
whereabouts/data_scripts/: gnaf_tidy.py
whereabouts/db_utils/: au_utils.py
whereabouts/matching_queries/: README.md  __init__.py  addrtext_with_detail.py  common.py  phrases.py  standard.py  standard_with_neighbours.py
whereabouts/queries/: create_addrtext.sql  (+28 more)
