[project]
name = "whereabouts-uv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.2.0",
    "fastparquet>=2024.11.0",
    "jinja2>=3.1.5",
    "joblib>=1.4.2",
    "lxml>=5.3.1",
    "numpy==1.26.4",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pyarrow>=19.0.1",
    "pytest>=8.3.4",
    "pyyaml>=6.0.2",
    "requests>=2.32.3",
    "ruff>=0.9.7",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.2",
    "tqdm>=4.67.1",
]
