[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "whereabouts"
version = "0.4.1"
description = "Fast, accurate open source geocoding in Python"
readme = "README.md"
keywords = ["geocoding", "geospatial", "record linkage"]
authors = [{ name = "Alex Lee", email = "ajlee3141@gmail.com" }]
requires-python = ">=3.12"
license = { file = "LICENSE" }  # This ensures the correct metadata is used
dependencies = [
    "duckdb>=1.2.0",
    "fastparquet>=2024.11.0",
    "jinja2>=3.1.5",
    "joblib>=1.4.2",
    "lxml>=5.3.1",
    "numpy==2.2.3",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pyarrow>=19.0.1",
    "pytest>=8.3.4",
    "pyyaml>=6.0.2",
    "requests==2.32.4",
    "ruff>=0.9.7",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.2",
    "tqdm>=4.67.1",
    "urllib3==2.5.0",
]

[project.urls]
Source = "https://github.com/ajl2718/whereabouts"
Issues = "https://github.com/ajl2718/whereabouts/issues"
Documentation = "https://whereabouts.readthedocs.io/en/latest"
